force-app/main/default/objects/Outcome_Indicator__c/Outcome_Indicator__c.object-meta.xml
<CustomObject>
    <description>ExP OM: Outcome Indicators summarize the results of their child Outcome Indicator Variables to affect their parent Outcome</description>
    <label>Outcome Indicator</label>
    <nameField>
        <displayFormat>OI-{0000}</displayFormat>
        <label>Outcome Indicator  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcome Indicators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>