force-app/main/default/objects/Outcome_Indicator__c/fields/Baseline__c.field-meta.xml
<CustomField>
    <fullName>Baseline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Baseline</label>
    <referenceTo>Outcome_Indicator__c</referenceTo>
    <relationshipLabel>Outcome Indicators</relationshipLabel>
    <relationshipName>Outcome_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>