force-app/main/default/objects/Outcome_Indicator__c/fields/Next__c.field-meta.xml
<CustomField>
    <fullName>Next__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next</label>
    <referenceTo>Outcome_Indicator__c</referenceTo>
    <relationshipLabel>Outcome Indicators (Next)</relationshipLabel>
    <relationshipName>Outcome_Indicators2</relationshipName>
    <type>Lookup</type>
</CustomField>