force-app/main/default/objects/Outcome_Indicator__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <referenceTo>Outcome__c</referenceTo>
    <relationshipName>Outcome_Indicator_Variable_Outcomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>