force-app/main/default/objects/Outcome_Indicator__c/fields/Outcome_Indicator_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Indicator_Configuration__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Outcome Indicator Configuration</label>
    <referenceTo>Outcome_Indicator_Configuration__c</referenceTo>
    <relationshipLabel>Outcome Indicators</relationshipLabel>
    <relationshipName>Outcome_Indicators</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>