force-app/main/default/objects/Outcome_Indicator__c/fields/Previous__c.field-meta.xml
<CustomField>
    <fullName>Previous__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous</label>
    <referenceTo>Outcome_Indicator__c</referenceTo>
    <relationshipLabel>Outcome Indicators (Previous)</relationshipLabel>
    <relationshipName>Outcome_Indicators1</relationshipName>
    <type>Lookup</type>
</CustomField>