force-app/main/default/objects/Outcome_Indicator__c/fields/Raw_Value__c.field-meta.xml
<CustomField>
    <fullName>Raw_Value__c</fullName>
    <label>Raw Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>