force-app/main/default/objects/Outcome_Indicator__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Outcome__c</columns>
    <columns>Outcome_Indicator_Configuration__c</columns>
    <columns>Raw_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>